# witness

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml  sync-docs.yml
docs/: adapters.mdx  interceptors.mdx  introduction.mdx  quickstart.mdx
docs/api/: trace.mdx
schema/: README.md  agent-trace.schema.json
src/aevyra_witness/: __init__.py  runtime.py  trace.py
src/aevyra_witness/adapters/: __init__.py  openclaw.py  otel.py
src/aevyra_witness/interceptors/: __init__.py  mcp.py
tests/: test_openclaw_adapter.py  test_runtime.py  test_trace.py
